// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Most Watched Page A11y I can see the skip to content link 1`] = `"مواد پر جائیں"`;

exports[`AMP Most Watched Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Most Watched Page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": Array [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Most Watched Page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=95&p=urdu.media.video.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x2=[amp]&x3=[news-urdu]&x4=[ur]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[list-datadriven]&x8=[simorgh]&x9=[%D8%B3%D8%A8%2B%D8%B3%DB%92%2B%D8%B2%DB%8C%D8%A7%D8%AF%DB%81%2B%D8%AF%DB%8C%DA%A9%DA%BE%DB%8C%2B%DA%AF%D8%A6%DB%8C%2B-%2BBBC%2BNews%2B%D8%A7%D8%B1%D8%AF%D9%88]&ref=\${documentReferrer}",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Most Watched Page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "Most Watched",
    "domain": "test.bbc.co.uk",
    "sections": "Urdu, Urdu - Most Watched",
    "title": "سب سے زیادہ دیکھی گئی - BBC News اردو",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Most Watched Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/urdu"`;

exports[`AMP Most Watched Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 بی بی سی. بی بی سی بیرونی ویب سائٹس کے مواد کا ذمہ دار نہیں بیرونی لنکس کے بارے میں ہماری پالیسی."`;

exports[`AMP Most Watched Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, اردو",
  "url": "/urdu",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 2`] = `
Object {
  "text": "جانیے کہ آپ بی بی سی پر کیوں اعتماد کر سکتے ہیں",
  "url": "https://www.bbc.com/urdu/institutional-49282935",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 3`] = `
Object {
  "text": "استعمال کے ضوابط",
  "url": "https://www.bbc.com/urdu/institutional-37588278",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 4`] = `
Object {
  "text": "بی بی سی کے بارے میں",
  "url": "https://www.bbc.com/urdu/institutional-37588280",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 5`] = `
Object {
  "text": "پرائیویسی پالیسی",
  "url": "https://www.bbc.com/urdu/institutional-37588282",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 6`] = `
Object {
  "text": "کوکیز",
  "url": "https://www.bbc.co.uk/privacy/cookies/managing/cookie-settings.html",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 7`] = `
Object {
  "text": "بی بی سی سے رابطہ کریں",
  "url": "https://www.bbc.com/urdu/institutional-37588285",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 9`] = `
Object {
  "text": "بیرونی لنکس کے بارے میں ہماری پالیسی.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`AMP Most Watched Page Header I can see the branding 1`] = `"BBC News, اردو"`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "صفحۂ اول",
  "url": "/urdu",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "پاکستان",
  "url": "/urdu/pakistan",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "آس پاس",
  "url": "/urdu/regional",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "ورلڈ",
  "url": "/urdu/world",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "کھیل",
  "url": "/urdu/sport",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "فن فنکار",
  "url": "/urdu/entertainment",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "سائنس",
  "url": "/urdu/science",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "موجودہ صفحہ, ویڈیو",
  "url": "/urdu/media/video",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 9`] = `
Object {
  "text": "پنجابی ويڈیو",
  "url": "/urdu/punjabi_video",
}
`;

exports[`AMP Most Watched Page I can see the list items 1`] = `"ویڈیو, ایرانی خواتین کو گیمر بننے کے لیے ملک کیوں چھوڑنا پڑتا ہے؟7 جولائی 2020"`;

exports[`AMP Most Watched Page I can see the list items 2`] = `"آڈیو, سیربین ریڈیو پروگرام رات 8 بجے لائیو15 اکتوبر 2015"`;

exports[`AMP Most Watched Page I can see the list items 3`] = `"ویڈیو, پاکستانی فری لانسنرز گھر بیٹھے ڈالر کیسے کماتے ہیں؟28 جنوری 2020"`;

exports[`AMP Most Watched Page I can see the list items 4`] = `"ویڈیو, کٹوا گوشت: مٹی کا برتن، لکڑی کی آگ اور پانچ گھنٹے کے بعد لذیذ گوشت تیار12 اگست 2019"`;

exports[`AMP Most Watched Page I can see the list items 5`] = `"ویڈیو, چین کا شہر ووہان لاک ڈاؤن سے کیسے نکلا؟3 جولائی 2020"`;

exports[`AMP Most Watched Page I can see the list items 6`] = `"ویڈیو, ’سپائے کیم‘: جنوبی کوریا میں خفیہ کیمروں کی وبا4 دسمبر 2018"`;

exports[`AMP Most Watched Page I can see the list items 7`] = `"ویڈیو, انٹرنیٹ پر سیکس کے نام پر لوگوں کو لوٹنے والے جعلسازوں سے کیسے نمٹا جائے؟10 دسمبر 2018"`;

exports[`AMP Most Watched Page I can see the list items 8`] = `"ویڈیو, کورونا وائرس کی وبا آخر کب ختم ہوگی؟4 مئ 2020"`;

exports[`AMP Most Watched Page I can see the list items 9`] = `"ویڈیو, 100 خواتین: آن لائن گیمر خاتون29 نومبر 2016"`;

exports[`AMP Most Watched Page I can see the list items 10`] = `"ویڈیو, جان نکسن کی سی آئی اے میں شمولیت کے دن سے صدام حسین کے بارے میں تحقیق ان کی زندگی کا محور۔5 جنوری 2017"`;

exports[`AMP Most Watched Page Main heading should match text 1`] = `"سب سے زیادہ دیکھی گئی"`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/urdu/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/urdu/images/icons/icon-72x72.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/urdu/images/icons/icon-96x96.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/urdu/images/icons/icon-128x128.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/urdu/images/icons/icon-144x144.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/urdu/images/icons/icon-152x152.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/urdu/images/icons/icon-180x180.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/urdu/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/urdu/images/icons/icon-384x384.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/urdu/images/icons/icon-512x512.png",
}
`;

exports[`AMP Most Watched Page SEO Canonical link 1`] = `"http://localhost:7080/urdu/media/video"`;

exports[`AMP Most Watched Page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP Most Watched Page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP Most Watched Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Most Watched Page SEO Heading level 1 1`] = `"سب سے زیادہ دیکھی گئی"`;

exports[`AMP Most Watched Page SEO Lang attribute 1`] = `"ur"`;

exports[`AMP Most Watched Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
        "width": 1024,
      },
      "inLanguage": Object {
        "@type": "Language",
        "alternateName": "ur",
        "name": "Urdu",
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/urdu/media/video",
        "@type": "WebPage",
        "name": "سب سے زیادہ دیکھی گئی",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
          "width": 1024,
        },
        "name": "BBC News اردو",
        "publishingPrinciples": "https://www.bbc.com/urdu/institutional-49282935",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
      "url": "http://localhost:7080/urdu/media/video",
    },
  ],
}
`;

exports[`AMP Most Watched Page SEO OG description 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;

exports[`AMP Most Watched Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png"`;

exports[`AMP Most Watched Page SEO OG image alt 1`] = `"BBC News اردو"`;

exports[`AMP Most Watched Page SEO OG locale 1`] = `"ur"`;

exports[`AMP Most Watched Page SEO OG site name 1`] = `"BBC News اردو"`;

exports[`AMP Most Watched Page SEO OG title 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;

exports[`AMP Most Watched Page SEO OG type 1`] = `"website"`;

exports[`AMP Most Watched Page SEO OG url 1`] = `"http://localhost:7080/urdu/media/video"`;

exports[`AMP Most Watched Page SEO Page title 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;

exports[`AMP Most Watched Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP Most Watched Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Most Watched Page SEO Twitter creator 1`] = `"@bbcurdu"`;

exports[`AMP Most Watched Page SEO Twitter description 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;

exports[`AMP Most Watched Page SEO Twitter image alt 1`] = `"BBC News اردو"`;

exports[`AMP Most Watched Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png"`;

exports[`AMP Most Watched Page SEO Twitter site 1`] = `"@bbcurdu"`;

exports[`AMP Most Watched Page SEO Twitter title 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;
